--- a/app/src/main/res/layout/comment_card.xml
+++ b/app/src/main/res/layout/comment_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
 
     app:cardCornerRadius="8dp"
     app:cardElevation="10dp"
@@ -46,7 +46,7 @@
             android:layout_height="match_parent" android:layout_weight="1">
             <TextView
                 android:text="Name"
-                android:textColor="@color/colorAccent"
+                android:textColor="#000"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/Name"
@@ -65,4 +65,4 @@
 
 
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
